allow direct links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <html>
 <body>
 	<h1>Hyperaudio Maker - Tester</h1>
-<p>
-<a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665 (static)</a>
-</p>
-<p>
-<a href="maker.html?m=52a6f1def223342d64000004">maker.html?m=52a6f1def223342d64000004 (YouTube)</a>
-</p>
+	<p>
+		Hyperaudio API (static) <a href="maker.html?m=52a1dfafe4b0379c692e4665">maker.html?m=52a1dfafe4b0379c692e4665</a>
+	</p>
+	<p>
+		Hyperaudio API (YouTube) <a href="maker.html?m=52a6f1def223342d64000004">maker.html?m=52a6f1def223342d64000004</a>
+	</p>
+	<p>
+		Direct Link (MP4) <a href="maker.html?mp4=http://hyperaud.io/video/obama-responds.mp4">maker.html?mp4=http://hyperaud.io/video/obama-responds.mp4</a>
+	</p>
+	<!--<p>
+		Direct Link (WebM) <a href="maker.html?webm=http://hyperaud.io/video/obama-responds.webm">maker.html?webm=http://hyperaud.io/video/obama-responds.webm</a>
+	</p>-->
+	<p>
+		Direct Link (YouTube) <a href="maker.html?yt=http://www.youtube.com/watch?v=wB4Gn0u4DSE">maker.html?yt=http://www.youtube.com/watch?v=wB4Gn0u4DSE</a>
+	</p>
 </body>
 </html>
