something is fishy, commented out the label

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ $( document ).ready(function() {
               dataType: "json",
               data: JSON.stringify({
                 _id: transcriptObject._id,
-                label:  'Transcript for ' + mediaObject.label,
+                label:  '',//'Transcript for ' + mediaObject.label,
                 type: 'text',
                 sort: 0,
                 owner: user.username,
