something is fishy, commented out the label

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ $( document ).ready(function() {
             contentType: "application/json; charset=utf-8",
             dataType: "json",
             data: JSON.stringify({
-              label:  'Transcript for ' + mediaObject.label,
+              label:  '',//'Transcript for ' + mediaObject.label,
               type: 'text',
               sort: 0,
               owner: user.username,
