--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ $( document ).ready(function() {
       if (user) {
         //
         if (transcriptObject) {
-            $.ajax( 'http://api.hyperaud.io/v1/' + user.username + '/transcripts/' + transcriptObject._id, {
+            $.ajax( 'http://api.hyperaud.io/v1/' + user + '/transcripts/' + transcriptObject._id, {
               type: "PUT",
               contentType: "application/json; charset=utf-8",
               dataType: "json",
@@ -331,7 +331,7 @@ $( document ).ready(function() {
                 label:  'Transcript for ' + mediaObject.label,
                 type: 'text',
                 sort: 0,
-                owner: user.username,
+                owner: user,
                 content: $('#content').text(),
                 media: mediaID
               }),
@@ -349,14 +349,14 @@ $( document ).ready(function() {
               crossDomain: true
             });
         } else {
-          $.ajax( 'http://api.hyperaud.io/v1/' + user.username + '/transcripts', {
+          $.ajax( 'http://api.hyperaud.io/v1/' + user + '/transcripts', {
             type: "POST",
             contentType: "application/json; charset=utf-8",
             dataType: "json",
             data: JSON.stringify({
               label:  'Transcript for ' + mediaObject.label,
               type: 'text',
-              owner: user.username,
+              owner: user,
               content: $('#content').text(),
               media: mediaID
             }),
