CSS/HTML cleanup

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Transcript Maker - Demo</title>
+  <title>Transcript Maker</title>
   <link rel="stylesheet" type="text/css" href="css/hyperaudio.transcript.css" />
   <link rel="stylesheet" type="text/css" href="css/hyperaudio.player.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -10,8 +10,10 @@
   <style>
   #content {
     font-size: 1.3em;
-    height: 16em;
+    padding: 10px; outline: 2px dashed #CCC; 
   }
+
+  #content:hover { outline: 2px dashed #0090D2; }
 
   #header {
     background: #0090D2;
@@ -39,37 +41,26 @@
   </style>
 </head>
 <body>
+
 <div id="wrapper">
   <header id="header">
     <h1>Hyperaudio Maker</h1>
-
     <div id="save-button">6</div>
   </header>
 <div>
 
 <div id="source-video" class="transcript-video"></div>
-
-<form class="controls">
-<input style="display:none; width:100%" id="pbr" type="range" value="1" min="0.5" max="4" step="0.1">
-<p id="pbrLabel" style="display:none">Playback Rate <span id="currentPbr">1</span></p>
-<input id="cht" type="range" value="4" min="0" max="10" step="1" style="width:100%">
-<p>Chunk Length (seconds) <span id="currentCht">4</span></p>
-<input id="inactivity" type="range" value="2" min="0.5" max="10" step="0.5" style="width:100%">
-<p>Inactivity Cue (seconds) <span id="currentInactivity">2</span></p>
-</form>
+  <form class="controls">
+    <input style="display:none; width:100%" id="pbr" type="range" value="1" min="0.5" max="4" step="0.1">
+    <p id="pbrLabel" style="display:none">Playback Rate <span id="currentPbr">1</span></p>
+    <input id="cht" type="range" value="4" min="0" max="10" step="1" style="width:100%">
+    <p>Chunk Length (seconds) <span id="currentCht">4</span></p>
+    <input id="inactivity" type="range" value="2" min="0.5" max="10" step="0.5" style="width:100%">
+    <p>Inactivity Cue (seconds) <span id="currentInactivity">2</span></p>
+  </form>
 </div>
-
 
 <div id="content" contenteditable="true"></div>
-
-</div>
-
-<button id='save'>SAVE</button>
-
-<style scoped>
-  [contenteditable="true"] { padding: 10px; outline: 2px dashed #CCC; }
-  [contenteditable="true"]:hover { outline: 2px dashed #0090D2; }
-</style>
 
 
 <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
@@ -300,8 +291,6 @@ $( document ).ready(function() {
   function getHATranscribedMedia() {
     $.get('http://api.hyperaud.io/v1/transcripts/' + transcriptId, function(_transcriptObject) {
       transcriptObject = _transcriptObject;
-
-
 
       assignMediaObject(transcriptObject.media);
 
