scroll issue FIX

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
   li.hyperaudio-player-play {
     background: #0090D2;
   }
+
+  #wrapper {
+    overflow: auto;
+  }
+
   </style>
 </head>
 <body>
