added abs urls to header

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
     <link href="/assets/stylesheets/hyperaudio.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/assets/images/inserts/favicon.ico" rel="icon" type="image/x-icon" >
     <link href="/assets/stylesheets/css/main.css" media="all" rel="stylesheet" type="text/css" />
-    <script src="../assets/vendor/picturefill/picturefill.js" type="text/javascript"></script>
+    <script src="/assets/vendor/picturefill/picturefill.js" type="text/javascript"></script>
   </head>
 
 
@@ -22,9 +22,9 @@
           <h1 class="header-brandmark">
             <a class="brandmark" href="/">
               <span data-picture class="brandmark-symbol">
-                <span data-src="../assets/images/inserts/logo-hyperaudio.png"></span>
-                <span data-src="../assets/images/inserts/logo-hyperaudio@2x.png" data-media="(-webkit-min-device-pixel-ratio:2)"></span>
-                <span data-src="../assets/images/inserts/logo-hyperaudio@2x.png" data-media="(min-resolution: 192dpi)"></span>
+                <span data-src="/assets/images/inserts/logo-hyperaudio.png"></span>
+                <span data-src="/assets/images/inserts/logo-hyperaudio@2x.png" data-media="(-webkit-min-device-pixel-ratio:2)"></span>
+                <span data-src="/assets/images/inserts/logo-hyperaudio@2x.png" data-media="(min-resolution: 192dpi)"></span>
               </span>
               <span class="brandmark-label">Hyperaudio</span>
             </a>
