--- a/header.html
+++ b/header.html
@@ -11,6 +11,12 @@
     <link href="/assets/images/inserts/favicon.ico" rel="icon" type="image/x-icon" >
     <link href="/assets/stylesheets/css/main.css" media="all" rel="stylesheet" type="text/css" />
     <script src="/assets/vendor/picturefill/picturefill.js" type="text/javascript"></script>
+    <style type="text/css">
+    header.header {
+      padding-top: 14px;
+      padding-bottom: 0px;
+    }
+    </style>
   </head>
 
 
