--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
 	<title>Hyperaudio Maker</title>
 	<style type="text/css">
+	body {
+		margin:0px;
+		padding:0px;
+		overflow:scroll-y;
+	}
+
 	.main {
 		overflow:hidden;
 		height: 100%;
 		height: calc(100% - 54px);
 		width:100%;
 		position:absolute;
-		top:100px;
+		top:54px;
 		left:0px;
 		right:0px;
 		bottom:0px;
 	}
 	</style>
 </head>
-<body style="margin:0px;padding:0px;overflow:scroll-y">
+<body>
 	<iframe src="header.html" height="100px" width="100%" frameborder="0" seamless scrolling="no"></iframe>
 	<iframe class="main" src="maker.html" height="100%" width="100%" frameborder="0" seamless></iframe>
 </body>
