--- a/maker.html
+++ b/maker.html
@@ -12,7 +12,7 @@
     font-size: 1.3em;
     padding: 10px; outline: 2px dashed #CCC; 
     width: 100%;
-    height: 100%;    
+    height: 200px;    
   }
 
   #content:hover { outline: 2px dashed #0090D2; }
