--- a/maker.html
+++ b/maker.html
@@ -98,7 +98,14 @@ if (document.location.hostname.indexOf('hyperaud') > 0) {
 var prefix = '';
 if (namespace) prefix = namespace + '.';
 
-var API = 'http://' + prefix + 'api.hyperaud.io/v1';
+var domain;
+if (document.location.hostname.indexOf('hyperaud.io') > -1) {
+  domain = 'hyperaud.io';
+} else {
+  domain = 'hyperaudio.net';
+}
+
+var API = 'http://' + prefix + 'api.' + domain + '/v1';
 
 $( document ).ready(function() {
 
